--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html> 
-  
-<html> 
-    <head> 
-        <title> 
-            Michelle Jenkins 
-        </title> 
-    </head> 
-  
-    <body> 
-        Hello World!!!!!!! :)
-    </body> 
-</html> 
+<!DOCTYPE HTML>
+<html>
+
+<head>
+
+<meta charset=”UTF-8”>
+
+<!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
+<title> Michelle Jenkins </title>
+
+</head>
+
+<body>
+Hello world, again!
+
+
+</body>
+
+</html>
