Updated site with logo, background, styles
bg, new hover over nav, font changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset=”UTF-8”>
 
 <!-- THE TITLE WILL APPEAR IN THE BROWSER WINDOW OR TAB -->
-<title> Michelle Jenkins Contact Page </title>
+<title> Michelle Jenkins' Contact Page </title>
 
 <link rel="stylesheet" href="styles-contact.css">
 
@@ -14,14 +14,13 @@
 
 <body>
     <div class="center">
-        <img id="logo" src="images/michelle_logo@2x.png" alt="Michelle Jenkins' Logo">
-        <h1> Hello, welcome to my contact page! <br>This is an h1 heading.</h1>
-        <h2>This is an h2 heading.</h2>
-        <p> This is a paragraph, you'll notice it's smaller. </p>
+        <img id="logo" src="images/mj_logo@2x.png" width="225" height="225" alt="Michelle Jenkins' Logo">
+        
+        <p> Welcome to my contact page! </p>
 
         <nav> 
             <ul>
-                <li><a href="https://www.behance.net">My Work</a></li>
+                <li><a href="https://www.behance.net">My Work</a></li> 
                 <li><a href="https://www.linkedin.com/in/michellesjenkins">LinkedIn</a></li>
                 <li><a href="mailto:mjenki08@calpoly.edu">Email Me</a></li>
             </ul>
